<resources>
    <string name="app_name">Calculator Project V2</string>
    <string name="press_to_play">Press to play!</string>
    <string name="display">Display</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="goal">Goal:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">×</string>
    <string name="divide">÷</string>
    <string name="welcome_to_calculator_the_puzzle">Welcome to Calculator the Puzzle</string>
    <string name="next">Next ➤</string>
    <string name="level_1">Level: 1</string>
    <string name="welcome_to_story_mode">Welcome to Story Mode!</string>
    <string name="would_you_like_to_go_to_the_tutorial_first">Would you like to go to the Tutorial First?</string>
    <string name="tutorial">Tutorial</string>
    <string name="story_mode">Story Mode</string>
    <string name="tutorial_label">Tutorial Label</string>
    <string name="click_here_for_a_tutorial">Click here for a Tutorial</string>
    <string name="storymodelabel">storyModeLabel</string>
    <string name="click_here_to_play_the_story">Click here to play the Story</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="welcome_to_calculator_to_kill_me">Welcome to Calculator to Kill Me!</string>
    <string name="backspaceArrow">Clear</string>
    <string name="apocalyptic_calculator">Apocalyptic Calculator</string>
    <string name="welcome_to_the_apocalypse">Welcome to the Apocalypse</string>
</resources>
