<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LevelOneActivity">

    <TextView
        android:id="@+id/buttonClickCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button Clicks: "
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/constraintDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Constraints: "
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_below="@id/buttonClickCounter"/>

    <TextView
        android:id="@+id/levelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_below="@id/constraintDisplay"/>

    <TextView
        android:id="@+id/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:layout_below="@id/levelLabel"/>

    <TextView
        android:id="@+id/goalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_below="@id/display"/>

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_1"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/goalDisplay"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"/>

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_2"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/goalDisplay"
        android:layout_marginTop="40dp"
        android:layout_marginStart="120dp"/>

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_3"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/goalDisplay"
        android:layout_marginTop="40dp"
        android:layout_marginStart="225dp"/>

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_4"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonOne"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_5"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonTwo"
        android:layout_alignStart="@id/buttonTwo"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_6"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonThree"
        android:layout_alignStart="@id/buttonThree"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_7"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonFour"
        android:layout_alignStart="@id/buttonFour"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_8"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonFive"
        android:layout_alignStart="@id/buttonFive"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/_9"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonSix"
        android:layout_alignStart="@id/buttonSix"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/additionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/plus"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonSeven"
        android:layout_alignStart="@id/buttonSeven"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/minus"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonEight"
        android:layout_alignStart="@id/buttonEight"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/times"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/buttonNine"
        android:layout_alignStart="@id/buttonNine"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/divide"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/additionButton"
        android:layout_alignStart="@id/additionButton"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="Go!"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/multiplicationButton"
        android:layout_alignStart="@id/multiplicationButton"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/backspaceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/calculator_custom_button"
        android:text="@string/backspaceArrow"
        android:textColor="#FFA500"
        android:textSize="25sp"
        android:layout_below="@id/subtractionButton"
        android:layout_alignStart="@id/subtractionButton"
        android:layout_marginTop="15dp"/>

</RelativeLayout>